Fix: Code for the admin and magazine controller tests